# chessjam

./: .gitignore  ATTRIBUTION.md  Cargo.toml  NOTES.md  README.md  build.rs  chessjam-01.patch  rustfmt.toml
assets/: config.toml
assets/shaders/: model.glsl  shadow.glsl  skyball.glsl  ui.glsl
lib/: libfreetype.6.dylib
purchess_practiss/: Cargo.toml
purchess_practiss/src/: main.rs
scripts/: audiogen  build_release  meshgen  meshgen.sh  python_mesh_export.py  tidy.sh
source_assets/meshes/: bishop.blend  coin.blend  king.blend  knight.blend  pawn.blend  quad.blend  queen.blend  rook.blend  skyball.blend  table.blend  tile.blend
source_assets/music/: the_line.mmpz
src/: audio.rs  chess.rs  config.rs  data.rs  graphics.rs  input.rs  lib.rs  main.rs  ui.rs
