[package]
name = "chessjam"
version = "0.1.0"
authors = ["***Realname*** ***Lastname*** <***redacted.email@redacted.nope***>"]

[dependencies]
config_struct = "=0.1.0"
glium = "=0.19.0"
image = "=0.18.0"
pleco = "=0.3.11"
serde = "~1.0.37"
serde_derive = "~1.0.37"
static_assets = "=0.1.0"
toml = "~0.4.6"

[dependencies.adequate_math]
path = "../adequate_math"

[dependencies.pleco_engine]
path = "../Pleco/pleco_engine"
