[package]
name = "chessjam"
version = "0.1.0"
authors = ["Claire Harris <claire.harris.000@gmail.com>"]

[profile.release]
# Seems like pleco might depend on panic_unwind for some reason ...
# panic = "abort"
lto = true

[dependencies]
glium = "=0.19.0"
image = "=0.18.0"
pleco = "=0.3.11"
serde = "~1.0.37"
serde_derive = "~1.0.37"
static_assets = "=0.1.0"
toml = "~0.4.6"
wavefront_obj = "=5.1.0"

[dependencies.adequate_math]
path = "../adequate_math"

[dependencies.pleco_engine]
path = "../Pleco/pleco_engine"

[build-dependencies.config_struct]
version = "=0.1.0"
features = ["toml-parsing"]
